--- a/src/input.css
+++ b/src/input.css
@@ -51,3 +51,9 @@
         -webkit-text-fill-color: transparent;
     }
 }
+
+@layer components {
+    .pic-container {
+        background: linear-gradient(to bottom, rgba(231, 15, 170, 1), rgba(0, 192, 253, 1));
+    }
+}
