--- a/public/style/style.css
+++ b/public/style/style.css
@@ -640,6 +640,32 @@ video {
   background: linear-gradient(to bottom, rgba(231, 15, 170, 1), rgba(0, 192, 253, 1));
 }
 
+@keyframes slideIn {
+  0% {
+    right: 80px;
+  }
+
+  100% {
+    max-width: -moz-max-content;
+    max-width: max-content;
+    max-height: -moz-max-content;
+    max-height: max-content;
+    visibility: visible;
+    opacity: 1;
+    right: 4px;
+  }
+}
+
+.header--menu__mobile.active {
+  visibility: visible;
+  max-height: -moz-max-content;
+  max-height: max-content;
+  max-width: -moz-max-content;
+  max-width: max-content;
+  opacity: 1;
+  animation: slideIn 0.2s ease forwards;
+}
+
 .invisible {
   visibility: hidden;
 }
@@ -652,12 +678,16 @@ video {
   position: relative;
 }
 
-.right-1 {
-  right: 0.25rem;
+.right-20 {
+  right: 5rem;
 }
 
 .top-full {
   top: 100%;
+}
+
+.z-50 {
+  z-index: 50;
 }
 
 .mt-56 {
@@ -729,6 +759,10 @@ video {
   flex-direction: column;
 }
 
+.flex-wrap-reverse {
+  flex-wrap: wrap-reverse;
+}
+
 .items-center {
   align-items: center;
 }
@@ -769,6 +803,11 @@ video {
 
 .bg-dark {
   background-color: rgba(25, 25, 25, 1);
+}
+
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
 .p-2 {
@@ -912,6 +951,10 @@ video {
 }
 
 @media (min-width: 1280px) {
+  .xl\:justify-between {
+    justify-content: space-between;
+  }
+
   .xl\:gap-x-16 {
     -moz-column-gap: 4rem;
          column-gap: 4rem;
