add links to social media to anchor tags

--- a/src/input.css
+++ b/src/input.css
@@ -33,6 +33,10 @@
         src: url("../font/poppins/Poppins-Light.ttf") format("truetype");
     }
 
+    html {
+        scroll-behavior: smooth;
+    }
+
     .text-gradient-1 {
         background: linear-gradient(to right, rgba(0, 192, 253, 1), rgba(231, 15, 170, 1));
         -webkit-background-clip: text;
