--- a/public/style/style.css
+++ b/public/style/style.css
@@ -480,6 +480,10 @@ video {
   src: url("../font/poppins/Poppins-Light.ttf") format("truetype");
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 .text-gradient-1 {
   background: linear-gradient(to right, rgba(0, 192, 253, 1), rgba(231, 15, 170, 1));
   -webkit-background-clip: text;
@@ -712,10 +716,6 @@ video {
   margin-top: 2.5rem;
 }
 
-.mt-12 {
-  margin-top: 3rem;
-}
-
 .mt-20 {
   margin-top: 5rem;
 }
@@ -853,10 +853,6 @@ video {
   align-items: center;
 }
 
-.justify-start {
-  justify-content: flex-start;
-}
-
 .justify-center {
   justify-content: center;
 }
@@ -912,6 +908,10 @@ video {
        column-gap: 52px;
 }
 
+.gap-y-2 {
+  row-gap: 0.5rem;
+}
+
 .gap-y-3 {
   row-gap: 0.75rem;
 }
@@ -922,18 +922,6 @@ video {
 
 .gap-y-6 {
   row-gap: 1.5rem;
-}
-
-.gap-y-8 {
-  row-gap: 2rem;
-}
-
-.gap-y-4 {
-  row-gap: 1rem;
-}
-
-.gap-y-2 {
-  row-gap: 0.5rem;
 }
 
 .overflow-hidden {
@@ -999,20 +987,16 @@ video {
   padding-bottom: 1.25rem;
 }
 
-.pb-11 {
-  padding-bottom: 2.75rem;
-}
-
 .pb-12 {
   padding-bottom: 3rem;
 }
 
-.pt-10 {
-  padding-top: 2.5rem;
-}
-
 .pb-6 {
   padding-bottom: 1.5rem;
+}
+
+.pt-10 {
+  padding-top: 2.5rem;
 }
 
 .text-center {
@@ -1053,6 +1037,11 @@ video {
   line-height: 2.25rem;
 }
 
+.text-base {
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
+
 .text-lg {
   font-size: 1.125rem;
   line-height: 1.75rem;
@@ -1071,11 +1060,6 @@ video {
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
-}
-
-.text-base {
-  font-size: 1rem;
-  line-height: 1.5rem;
 }
 
 .leading-10 {
@@ -1169,24 +1153,24 @@ video {
     line-height: 1.5rem;
   }
 
-  .xs\:text-sm {
-    font-size: 0.875rem;
-    line-height: 1.25rem;
-  }
-
   .xs\:text-lg {
     font-size: 1.125rem;
     line-height: 1.75rem;
   }
+
+  .xs\:text-sm {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
 }
 
 @media (min-width: 640px) {
-  .sm\:mt-16 {
-    margin-top: 4rem;
-  }
-
   .sm\:mt-12 {
     margin-top: 3rem;
+  }
+
+  .sm\:mt-16 {
+    margin-top: 4rem;
   }
 
   .sm\:block {
@@ -1270,10 +1254,6 @@ video {
 
   .md\:flex-nowrap {
     flex-wrap: nowrap;
-  }
-
-  .md\:items-center {
-    align-items: center;
   }
 
   .md\:gap-x-5 {
