--- a/public/style/style.css
+++ b/public/style/style.css
@@ -748,6 +748,10 @@ html {
   margin-top: 20rem;
 }
 
+.block {
+  display: block;
+}
+
 .inline-block {
   display: inline-block;
 }
@@ -1366,4 +1370,16 @@ html {
     -moz-column-gap: 4rem;
          column-gap: 4rem;
   }
+}
+
+.dark\:block:where(.dark, .dark *) {
+  display: block;
+}
+
+.dark\:hidden:where(.dark, .dark *) {
+  display: none;
+}
+
+.dark\:bg-dark:where(.dark, .dark *) {
+  background-color: rgba(25, 25, 25, 1);
 }
