--- a/public/style/style.css
+++ b/public/style/style.css
@@ -1388,10 +1388,11 @@ html {
   fill: rgba(167, 167, 167, 1);
 }
 
-.dark\:text-lightGray:where(.dark, .dark *) {
-  color: rgba(217, 217, 217, 1);
-}
-
 .dark\:text-midGray:where(.dark, .dark *) {
   color: rgba(167, 167, 167, 1);
+}
+
+.dark\:text-white:where(.dark, .dark *) {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
