--- a/public/style/style.css
+++ b/public/style/style.css
@@ -716,6 +716,10 @@ html {
   margin-top: 2.5rem;
 }
 
+.mt-2 {
+  margin-top: 0.5rem;
+}
+
 .mt-20 {
   margin-top: 5rem;
 }
@@ -748,6 +752,10 @@ html {
   margin-top: 20rem;
 }
 
+.mt-9 {
+  margin-top: 2.25rem;
+}
+
 .block {
   display: block;
 }
@@ -770,6 +778,10 @@ html {
 
 .hidden {
   display: none;
+}
+
+.h-4 {
+  height: 1rem;
 }
 
 .h-40 {
@@ -799,6 +811,10 @@ html {
 
 .max-h-0 {
   max-height: 0px;
+}
+
+.w-4 {
+  width: 1rem;
 }
 
 .w-40 {
@@ -833,6 +849,10 @@ html {
   max-width: 1193px;
 }
 
+.max-w-\[700px\] {
+  max-width: 700px;
+}
+
 .grid-rows-2 {
   grid-template-rows: repeat(2, minmax(0, 1fr));
 }
@@ -851,6 +871,10 @@ html {
 
 .items-start {
   align-items: flex-start;
+}
+
+.items-end {
+  align-items: flex-end;
 }
 
 .items-center {
@@ -877,6 +901,11 @@ html {
   gap: 1rem;
 }
 
+.gap-x-1 {
+  -moz-column-gap: 0.25rem;
+       column-gap: 0.25rem;
+}
+
 .gap-x-2 {
   -moz-column-gap: 0.5rem;
        column-gap: 0.5rem;
@@ -885,6 +914,11 @@ html {
 .gap-x-2\.5 {
   -moz-column-gap: 0.625rem;
        column-gap: 0.625rem;
+}
+
+.gap-x-4 {
+  -moz-column-gap: 1rem;
+       column-gap: 1rem;
 }
 
 .gap-x-5 {
@@ -912,6 +946,14 @@ html {
        column-gap: 52px;
 }
 
+.gap-y-1 {
+  row-gap: 0.25rem;
+}
+
+.gap-y-1\.5 {
+  row-gap: 0.375rem;
+}
+
 .gap-y-2 {
   row-gap: 0.5rem;
 }
@@ -926,6 +968,26 @@ html {
 
 .gap-y-6 {
   row-gap: 1.5rem;
+}
+
+.gap-y-7 {
+  row-gap: 1.75rem;
+}
+
+.gap-y-4 {
+  row-gap: 1rem;
+}
+
+.gap-y-3\.5 {
+  row-gap: 0.875rem;
+}
+
+.gap-y-\[18px\] {
+  row-gap: 18px;
+}
+
+.gap-y-\[17px\] {
+  row-gap: 17px;
 }
 
 .overflow-hidden {
@@ -944,16 +1006,40 @@ html {
   border-radius: 9999px;
 }
 
+.border {
+  border-width: 1px;
+}
+
 .border-b-2 {
   border-bottom-width: 2px;
+}
+
+.border-t {
+  border-top-width: 1px;
+}
+
+.border-t-2 {
+  border-top-width: 2px;
 }
 
 .border-darkGray\/30 {
   border-color: rgba(102, 102, 102, 0.3);
 }
 
+.border-lightGreen {
+  border-color: rgba(215, 255, 224, 1);
+}
+
+.border-lightBorder {
+  border-color: rgba(235, 234, 237, 1);
+}
+
 .bg-dark {
   background-color: rgba(25, 25, 25, 1);
+}
+
+.bg-lightGreen {
+  background-color: rgba(215, 255, 224, 1);
 }
 
 .bg-white {
@@ -986,6 +1072,16 @@ html {
   padding-right: 1rem;
 }
 
+.px-6 {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
+
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
 .py-5 {
   padding-top: 1.25rem;
   padding-bottom: 1.25rem;
@@ -1001,6 +1097,10 @@ html {
 
 .pt-10 {
   padding-top: 2.5rem;
+}
+
+.pt-7 {
+  padding-top: 1.75rem;
 }
 
 .text-center {
@@ -1041,6 +1141,10 @@ html {
   line-height: 2.25rem;
 }
 
+.text-\[42px\] {
+  font-size: 42px;
+}
+
 .text-base {
   font-size: 1rem;
   line-height: 1.5rem;
@@ -1070,6 +1174,18 @@ html {
   line-height: 2.5rem;
 }
 
+.leading-7 {
+  line-height: 1.75rem;
+}
+
+.leading-\[26px\] {
+  line-height: 26px;
+}
+
+.tracking-\[1px\] {
+  letter-spacing: 1px;
+}
+
 .text-black {
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity));
@@ -1085,6 +1201,14 @@ html {
 
 .text-gradient-2 {
   color: linear-gradient(to right, rgba(19, 176, 245, 1), rgba(231, 15, 170, 1));
+}
+
+.text-green {
+  color: rgba(1, 140, 15, 1);
+}
+
+.text-midGray {
+  color: rgba(167, 167, 167, 1);
 }
 
 .text-purple {
@@ -1354,6 +1478,10 @@ html {
 }
 
 @media (min-width: 1280px) {
+  .xl\:mt-32 {
+    margin-top: 8rem;
+  }
+
   .xl\:mt-56 {
     margin-top: 14rem;
   }
@@ -1378,6 +1506,14 @@ html {
 
 .dark\:hidden:where(.dark, .dark *) {
   display: none;
+}
+
+.dark\:border-darkGray:where(.dark, .dark *) {
+  border-color: rgba(102, 102, 102, 1);
+}
+
+.dark\:border-green:where(.dark, .dark *) {
+  border-color: rgba(1, 140, 15, 1);
 }
 
 .dark\:bg-dark:where(.dark, .dark *) {
