--- a/public/style/style.css
+++ b/public/style/style.css
@@ -756,6 +756,14 @@ html {
   margin-top: 2.25rem;
 }
 
+.mt-12 {
+  margin-top: 3rem;
+}
+
+.mt-5 {
+  margin-top: 1.25rem;
+}
+
 .block {
   display: block;
 }
@@ -839,6 +847,11 @@ html {
 
 .w-\[30px\] {
   width: 30px;
+}
+
+.w-max {
+  width: -moz-max-content;
+  width: max-content;
 }
 
 .max-w-0 {
@@ -974,24 +987,16 @@ html {
   row-gap: 1.75rem;
 }
 
-.gap-y-4 {
-  row-gap: 1rem;
-}
-
-.gap-y-3\.5 {
-  row-gap: 0.875rem;
-}
-
-.gap-y-\[18px\] {
-  row-gap: 18px;
-}
-
 .gap-y-\[17px\] {
   row-gap: 17px;
 }
 
 .overflow-hidden {
   overflow: hidden;
+}
+
+.text-nowrap {
+  text-wrap: nowrap;
 }
 
 .rounded {
@@ -1014,10 +1019,6 @@ html {
   border-bottom-width: 2px;
 }
 
-.border-t {
-  border-top-width: 1px;
-}
-
 .border-t-2 {
   border-top-width: 2px;
 }
@@ -1026,12 +1027,12 @@ html {
   border-color: rgba(102, 102, 102, 0.3);
 }
 
-.border-lightGreen {
-  border-color: rgba(215, 255, 224, 1);
-}
-
 .border-lightBorder {
   border-color: rgba(235, 234, 237, 1);
+}
+
+.border-lightGreen {
+  border-color: rgba(215, 255, 224, 1);
 }
 
 .bg-dark {
@@ -1085,6 +1086,21 @@ html {
 .py-5 {
   padding-top: 1.25rem;
   padding-bottom: 1.25rem;
+}
+
+.py-1 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+
+.px-3 {
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+}
+
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
 }
 
 .pb-12 {
@@ -1141,10 +1157,6 @@ html {
   line-height: 2.25rem;
 }
 
-.text-\[42px\] {
-  font-size: 42px;
-}
-
 .text-base {
   font-size: 1rem;
   line-height: 1.5rem;
@@ -1170,6 +1182,10 @@ html {
   line-height: 1rem;
 }
 
+.text-\[10px\] {
+  font-size: 10px;
+}
+
 .leading-10 {
   line-height: 2.5rem;
 }
@@ -1178,8 +1194,8 @@ html {
   line-height: 1.75rem;
 }
 
-.leading-\[26px\] {
-  line-height: 26px;
+.leading-8 {
+  line-height: 2rem;
 }
 
 .tracking-\[1px\] {
@@ -1239,6 +1255,52 @@ html {
   transition-duration: 150ms;
 }
 
+@media (min-width: 640px) {
+  .sm\:container {
+    width: 100%;
+    margin-right: auto;
+    margin-left: auto;
+    padding-right: 0.5rem;
+    padding-left: 0.5rem;
+  }
+
+  @media (min-width: 365px) {
+    .sm\:container {
+      max-width: 365px;
+    }
+  }
+
+  @media (min-width: 640px) {
+    .sm\:container {
+      max-width: 640px;
+    }
+  }
+
+  @media (min-width: 768px) {
+    .sm\:container {
+      max-width: 768px;
+    }
+  }
+
+  @media (min-width: 1024px) {
+    .sm\:container {
+      max-width: 1024px;
+    }
+  }
+
+  @media (min-width: 1280px) {
+    .sm\:container {
+      max-width: 1280px;
+    }
+  }
+
+  @media (min-width: 1536px) {
+    .sm\:container {
+      max-width: 1536px;
+    }
+  }
+}
+
 @media (min-width: 365px) {
   .xs\:mt-5 {
     margin-top: 1.25rem;
@@ -1254,6 +1316,10 @@ html {
 
   .xs\:w-80 {
     width: 20rem;
+  }
+
+  .xs\:flex-nowrap {
+    flex-wrap: nowrap;
   }
 
   .xs\:px-5 {
@@ -1301,8 +1367,16 @@ html {
     margin-top: 4rem;
   }
 
+  .sm\:mt-9 {
+    margin-top: 2.25rem;
+  }
+
   .sm\:block {
     display: block;
+  }
+
+  .sm\:flex {
+    display: flex;
   }
 
   .sm\:hidden {
@@ -1315,6 +1389,10 @@ html {
 
   .sm\:w-6 {
     width: 1.5rem;
+  }
+
+  .sm\:w-full {
+    width: 100%;
   }
 
   .sm\:flex-row {
@@ -1335,6 +1413,16 @@ html {
     padding-right: 2rem;
   }
 
+  .sm\:px-6 {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
+
+  .sm\:py-2 {
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+  }
+
   .sm\:pb-11 {
     padding-bottom: 2.75rem;
   }
@@ -1342,6 +1430,11 @@ html {
   .sm\:text-2xl {
     font-size: 1.5rem;
     line-height: 2rem;
+  }
+
+  .sm\:text-3xl {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
   }
 
   .sm\:text-5xl {
@@ -1366,6 +1459,16 @@ html {
   .sm\:text-xl {
     font-size: 1.25rem;
     line-height: 1.75rem;
+  }
+
+  .sm\:text-sm {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
+
+  .sm\:text-xs {
+    font-size: 0.75rem;
+    line-height: 1rem;
   }
 }
 
@@ -1497,6 +1600,19 @@ html {
   .xl\:gap-x-16 {
     -moz-column-gap: 4rem;
          column-gap: 4rem;
+  }
+
+  .xl\:text-\[42px\] {
+    font-size: 42px;
+  }
+
+  .xl\:text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+
+  .xl\:leading-\[26px\] {
+    line-height: 26px;
   }
 }
 
